<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.example.usercenter.viewmodel.UserViewModel" />

        <variable
            name="reg"
            type="com.example.usercenter.view.act.UserRegisterActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.weight.TitleBar
            android:id="@+id/tb_bar"
            app:left_txt=""
            app:left_icon="@drawable/fanhui"
            app:left_iocn_visible="true"
            app:title_txt="用户注册"
            app:right_txt=""
            app:right_icon_visible="true"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </com.example.weight.TitleBar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="设置昵称、头像、电话号码注册成新用户"/>
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/ic_launcher_background"/>
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <EditText
                android:text="@{vm.userRegEntity.username}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/user_hint_username" />

            <EditText
                android:text="@{vm.userRegEntity.pwd}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/user_hint_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/user_hint_password_again" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center">

            <Button
                android:onClick="@{reg::register}"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/user_reg"
                android:background="@drawable/shape_btn_green"
                android:textColor="@color/white"
                android:textSize="25sp"/>

        </LinearLayout>

    </LinearLayout>

</layout>