<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="comand"
            type="com.example.usercenter.view.act.UserLoginActivity"/>

        <variable
            name="vm"
            type="com.example.usercenter.viewmodel.UserViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.weight.TitleBar
            android:id="@+id/tb_bar"
            app:left_txt=""
            app:left_icon="@drawable/fanhui"
            app:left_iocn_visible="true"
            app:title_txt="密码登录"
            app:right_txt=""
            app:right_icon_visible="true"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </com.example.weight.TitleBar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:src="@drawable/ic_launcher_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <EditText
                android:layout_margin="10dp"
                   android:hint="@string/user_hint_username"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@={vm.userEntity.username}"/>

               <EditText
                   android:layout_margin="10dp"
                   android:hint="@string/user_hint_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@={vm.userEntity.pwd}" />

            <CheckBox
                android:id="@+id/check"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住密码"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp">

                <Button
                    android:background="@drawable/shape_edt_blue"
                    android:textColor="@color/white"
                    android:text="@string/user_login"
                    android:onClick="@{comand::loginClick}"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/change_pwd"
                android:onClick="changePwd"/>

        </RelativeLayout>



    </LinearLayout>

</layout>